[package]
name = "ilo-toki"
version = "0.1.0"
edition = "2021"
description = "A terminal chat client for the Harmony protocol!"
license = "MIT"
homepage = "https://github.com/jenra-uwu/ilo-toki"
repository = "https://github.com/jenra-uwu/ilo-toki"
documentation = "https://docs.rs/crate/ilo-toki"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
crossterm = "0.20"
dotenv = "0.15.0"
harmony_rust_sdk = { version = "0.7.0", features = ["client_native"] }
tokio = { version = "1.15.0", features = ["full"] }
tui = { version = "0.16", default-features = false, features = ['crossterm'] }
ueberzug = "0.1.0"
